update to java8 Base64